Add monthly statement view and API

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
             <h2>Menu</h2>
             <ul>
                 <li><a href="#" id="upload-ofx">Upload OFX File</a></li>
-                <li><a href="#" id="view-statement">View Monthly Statement</a></li>
+                <li><a href="monthly_statement.html" id="view-statement">View Monthly Statement</a></li>
             </ul>
         </nav>
         <main class="content">
