Add tag management with auto tagging

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="#" id="upload-ofx">Upload OFX File</a></li>
                 <li><a href="#" id="view-statement">View Monthly Statement</a></li>
+                <li><a href="tags.html" id="manage-tags">Manage Tags</a></li>
             </ul>
         </nav>
         <main class="content">
