--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -68,5 +68,6 @@ form.addEventListener('submit', function(e) {
         });
 });
 </script>
+    <script src="js/overlay.js"></script>
 </body>
 </html>
