--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,5 +26,6 @@
             <p>Select an option from the menu to get started.</p>
         </main>
     </div>
+    <script src="js/overlay.js"></script>
 </body>
 </html>
