--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -8,12 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <nav class="sidebar">
-            <h2>Menu</h2>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
+        <nav class="sidebar" id="menu"></nav>
         <main class="content">
             <h1>Upload OFX File</h1>
             <form action="../php_backend/public/upload_ofx.php" method="POST" enctype="multipart/form-data">
@@ -22,5 +17,6 @@
             </form>
         </main>
     </div>
+    <script src="js/menu.js"></script>
 </body>
 </html>
