--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -8,12 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <nav class="sidebar">
-            <h2>Menu</h2>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
+        <nav class="sidebar" id="menu"></nav>
         <main class="content">
             <h1>Manage Categories</h1>
             <section>
@@ -44,5 +39,6 @@
             </section>
         </main>
     </div>
+    <script src="js/menu.js"></script>
 </body>
 </html>
