Fix missing side menu

--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -39,6 +39,7 @@
             </section>
         </main>
     </div>
+    <script src="js/menu.js"></script>
     <script src="js/overlay.js"></script>
     <script>
     document.querySelectorAll("form").forEach(f => {
