--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
             <p>Select an option from the menu to get started.</p>
         </main>
     </div>
+    <script src="js/menu.js"></script>
     <script src="js/overlay.js"></script>
 </body>
 </html>
