--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -17,7 +17,7 @@
             </form>
         </main>
     </div>
-
+    <script src="js/menu.js"></script>
     <script src="js/overlay.js"></script>
     <script>
 const uploadForm = document.querySelector("form");
