Add logs viewing section

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -6,4 +6,5 @@
     <li><a href="report.html">Transaction Reports</a></li>
     <li><a href="tags.html">Manage Tags</a></li>
     <li><a href="categories.html">Manage Categories</a></li>
+    <li><a href="logs.html">View Logs</a></li>
 </ul>
