Add transaction search feature

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -4,6 +4,7 @@
     <li><a href="upload.html">Upload OFX File</a></li>
     <li><a href="monthly_statement.html">View Monthly Statement</a></li>
     <li><a href="report.html">Transaction Reports</a></li>
+    <li><a href="search.html">Search Transactions</a></li>
     <li><a href="tags.html">Manage Tags</a></li>
     <li><a href="categories.html">Manage Categories</a></li>
     <li><a href="logs.html">View Logs</a></li>
