--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -47,7 +47,7 @@
         f.addEventListener("submit", async e => {
             e.preventDefault();
             const data = new FormData(f);
-            const resp = await fetch(f.action, {method: f.method, body: data});
+            const resp = await fetch(f.action, {method: f.method.toUpperCase(), body: data});
             const text = await resp.text();
             try {
                 const j = JSON.parse(text);
