--- a/frontend/report.html
+++ b/frontend/report.html
@@ -23,9 +23,11 @@
                 </thead>
                 <tbody></tbody>
             </table>
+            <div id="chart" style="height:400px;margin-top:20px;"></div>
         </main>
     </div>
     <script src="js/menu.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
     <script>
     document.getElementById('report-form').addEventListener('submit', function(e) {
         e.preventDefault();
@@ -40,12 +42,23 @@
             .then(resp => resp.json())
             .then(data => {
                 const tbody = document.querySelector('#results tbody');
+                const chartContainer = document.getElementById('chart');
                 tbody.innerHTML = '';
+                chartContainer.innerHTML = '';
                 if (Array.isArray(data) && data.length) {
                     data.forEach(tx => {
                         const tr = document.createElement('tr');
                         tr.innerHTML = `<td>${tx.date}</td><td>${tx.amount}</td><td>${tx.description}</td>`;
                         tbody.appendChild(tr);
+                    });
+                    const categories = data.map(tx => tx.date);
+                    const amounts = data.map(tx => parseFloat(tx.amount));
+                    Highcharts.chart('chart', {
+                        chart: { type: 'column' },
+                        title: { text: 'Transaction Amounts' },
+                        xAxis: { categories: categories, title: { text: 'Date' } },
+                        yAxis: { title: { text: 'Amount' } },
+                        series: [{ name: 'Amount', data: amounts }]
                     });
                 } else {
                     tbody.innerHTML = '<tr><td colspan="3">No transactions found.</td></tr>';
