--- a/frontend/report.html
+++ b/frontend/report.html
@@ -24,8 +24,12 @@
     <script src="js/menu.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
-    <script src="https://code.highcharts.com/modules/datagrid.js"></script>
+<script src="https://code.highcharts.com/modules/datagrid.js"></script>
     <script>
+    function formatCurrency(value) {
+        return '£' + parseFloat(value).toFixed(2);
+    }
+
     document.getElementById('report-form').addEventListener('submit', function(e) {
         e.preventDefault();
         const category = document.getElementById('category').value;
@@ -46,7 +50,7 @@
                     const dataTable = new Highcharts.DataTable({
                         columns: {
                             date: data.map(tx => tx.date),
-                            amount: data.map(tx => tx.amount),
+                            amount: data.map(tx => formatCurrency(tx.amount)),
                             description: data.map(tx => tx.description)
                         }
                     });
@@ -57,6 +61,10 @@
                             amount: { title: 'Amount' },
                             description: { title: 'Description' }
                         }
+                    });
+                    document.querySelectorAll('#results-grid table tr').forEach(row => {
+                        const cell = row.children[1];
+                        if (cell) cell.classList.add('currency');
                     });
                     const categories = data.map(tx => tx.date);
                     const amounts = data.map(tx => parseFloat(tx.amount));
