Display running version

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,10 +12,12 @@
         <main class="content">
             <h1>Welcome to Finance Manager</h1>
             <p>Select an option from the menu to get started.</p>
+            <p id="version">Version: loading...</p>
         </main>
     </div>
 
     <script src="js/menu.js"></script>
+    <script src="js/version.js"></script>
 
     <script src="js/overlay.js"></script>
 </body>
