Add descriptive comments across project

--- a/frontend/search.html
+++ b/frontend/search.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Interface for searching transactions by field and value -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
