--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -1,18 +1,18 @@
 <!-- Navigation menu shared across pages -->
-<h2>Menu</h2>
-<ul>
-    <li><a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
-    <li><a href="upload.html"><i class="fa-solid fa-upload"></i> Upload OFX File</a></li>
-    <li><a href="yearly_dashboard.html"><i class="fa-solid fa-chart-line"></i> Yearly Dashboard</a></li>
-    <li><a href="all_years_dashboard.html"><i class="fa-solid fa-chart-bar"></i> All Years Dashboard</a></li>
-    <li><a href="monthly_dashboard.html"><i class="fa-solid fa-chart-column"></i> Monthly Dashboard</a></li>
-    <li><a href="monthly_statement.html"><i class="fa-solid fa-file-invoice-dollar"></i> View Monthly Statement</a></li>
-    <li><a href="report.html"><i class="fa-solid fa-table"></i> Transaction Reports</a></li>
-    <li><a href="search.html"><i class="fa-solid fa-magnifying-glass"></i> Search Transactions</a></li>
-    <li><a href="tags.html"><i class="fa-solid fa-tags"></i> Manage Tags</a></li>
-    <li><a href="categories.html"><i class="fa-solid fa-folder-open"></i> Manage Categories</a></li>
-    <li><a href="groups.html"><i class="fa-solid fa-users"></i> Manage Groups</a></li>
-    <li><a href="logs.html"><i class="fa-solid fa-clipboard-list"></i> View Logs</a></li>
-    <li><a href="../users.php"><i class="fa-solid fa-user"></i> Manage Users</a></li>
-    <li><a href="../logout.php"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+<h2 class="text-xl font-semibold mb-4">Menu</h2>
+<ul class="space-y-2">
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="index.html"><i class="fa-solid fa-house mr-2"></i> Home</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="upload.html"><i class="fa-solid fa-upload mr-2"></i> Upload OFX File</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="yearly_dashboard.html"><i class="fa-solid fa-chart-line mr-2"></i> Yearly Dashboard</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="all_years_dashboard.html"><i class="fa-solid fa-chart-bar mr-2"></i> All Years Dashboard</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="monthly_dashboard.html"><i class="fa-solid fa-chart-column mr-2"></i> Monthly Dashboard</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="monthly_statement.html"><i class="fa-solid fa-file-invoice-dollar mr-2"></i> View Monthly Statement</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="report.html"><i class="fa-solid fa-table mr-2"></i> Transaction Reports</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="search.html"><i class="fa-solid fa-magnifying-glass mr-2"></i> Search Transactions</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="tags.html"><i class="fa-solid fa-tags mr-2"></i> Manage Tags</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="categories.html"><i class="fa-solid fa-folder-open mr-2"></i> Manage Categories</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="groups.html"><i class="fa-solid fa-users mr-2"></i> Manage Groups</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="logs.html"><i class="fa-solid fa-clipboard-list mr-2"></i> View Logs</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="../users.php"><i class="fa-solid fa-user mr-2"></i> Manage Users</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="../logout.php"><i class="fa-solid fa-right-from-bracket mr-2"></i> Logout</a></li>
 </ul>
