--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Categories</title>
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="container">
-        <nav class="sidebar" id="menu"></nav>
-        <main class="content">
-            <h1>Manage Categories</h1>
-            <form id="category-form">
-                <label>Category Name<br><input type="text" id="category-name"></label><br>
-                <button type="submit">Create Category</button>
+<body class="bg-gray-50 font-sans">
+    <div class="flex min-h-screen">
+        <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
+        <main class="flex-1 p-6">
+            <h1 class="text-2xl font-semibold mb-4">Manage Categories</h1>
+            <form id="category-form" class="space-y-4">
+                <label class="block">Category Name<br><input type="text" id="category-name" class="border p-2 rounded w-full"></label>
+                <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Category</button>
             </form>
-            <h2>Existing Categories</h2>
-            <ul id="category-list"></ul>
+            <h2 class="text-xl font-semibold mt-6 mb-2">Existing Categories</h2>
+            <ul id="category-list" class="space-y-2"></ul>
         </main>
     </div>
     <script src="js/menu.js"></script>
@@ -34,6 +34,7 @@ async function loadCategories() {
         span.textContent = `${c.name}${tags ? ': ' + tags : ''}`;
         const editBtn = document.createElement('button');
         editBtn.textContent = 'Edit';
+        editBtn.className = 'ml-2 bg-blue-600 text-white px-2 py-1 rounded';
         editBtn.addEventListener('click', async () => {
             const name = prompt('Category Name', c.name);
             if (name === null) return;
@@ -47,6 +48,7 @@ async function loadCategories() {
         });
         const tagBtn = document.createElement('button');
         tagBtn.textContent = 'Assign Tag';
+        tagBtn.className = 'ml-2 bg-gray-600 text-white px-2 py-1 rounded';
         tagBtn.addEventListener('click', async () => {
             const resTags = await fetch('../php_backend/public/tags.php');
             const allTags = await resTags.json();
