--- a/frontend/groups.html
+++ b/frontend/groups.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Groups</title>
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="container">
-        <nav class="sidebar" id="menu"></nav>
-        <main class="content">
-            <h1>Manage Groups</h1>
-            <form id="group-form">
-                <label>Group Name<br><input type="text" id="group-name"></label><br>
-                <button type="submit">Create Group</button>
+<body class="bg-gray-50 font-sans">
+    <div class="flex min-h-screen">
+        <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
+        <main class="flex-1 p-6">
+            <h1 class="text-2xl font-semibold mb-4">Manage Groups</h1>
+            <form id="group-form" class="space-y-4">
+                <label class="block">Group Name<br><input type="text" id="group-name" class="border p-2 rounded w-full"></label>
+                <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Group</button>
             </form>
-            <h2>Existing Groups</h2>
-            <ul id="group-list"></ul>
+            <h2 class="text-xl font-semibold mt-6 mb-2">Existing Groups</h2>
+            <ul id="group-list" class="space-y-2"></ul>
         </main>
     </div>
     <script src="js/menu.js"></script>
@@ -33,6 +33,7 @@ async function loadGroups() {
         span.textContent = g.name;
         const btn = document.createElement('button');
         btn.textContent = 'Edit';
+        btn.className = 'ml-2 bg-blue-600 text-white px-2 py-1 rounded';
         btn.addEventListener('click', async () => {
             const name = prompt('Group Name', g.name);
             if (name === null) return;
