--- a/frontend/report.html
+++ b/frontend/report.html
@@ -5,29 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transaction Reports</title>
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@5.5.0/dist/css/tabulator.min.css">
 </head>
-<body>
-    <div class="container">
-        <nav class="sidebar" id="menu"></nav>
-        <main class="content">
-            <h1>Transaction Reports</h1>
-            <form id="report-form">
-                <label>Category: <select id="category"></select></label>
-                <label>Tag: <select id="tag"></select></label>
-                <label>Group: <select id="group"></select></label>
-                <label>Text: <input type="text" id="text"></label>
-                <label>Start Date: <input type="date" id="start"></label>
-                <label>End Date: <input type="date" id="end"></label>
-                <button type="submit">Run Report</button>
-                <button type="button" id="save-report">Save Report</button>
+<body class="bg-gray-50 font-sans">
+    <div class="flex min-h-screen">
+        <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
+        <main class="flex-1 p-6">
+            <h1 class="text-2xl font-semibold mb-4">Transaction Reports</h1>
+            <form id="report-form" class="space-y-4">
+                <label class="block">Category: <select id="category" class="border p-2 rounded w-full"></select></label>
+                <label class="block">Tag: <select id="tag" class="border p-2 rounded w-full"></select></label>
+                <label class="block">Group: <select id="group" class="border p-2 rounded w-full"></select></label>
+                <label class="block">Text: <input type="text" id="text" class="border p-2 rounded w-full"></label>
+                <label class="block">Start Date: <input type="date" id="start" class="border p-2 rounded w-full"></label>
+                <label class="block">End Date: <input type="date" id="end" class="border p-2 rounded w-full"></label>
+                <div class="space-x-2">
+                    <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Run Report</button>
+                    <button type="button" id="save-report" class="bg-gray-600 text-white px-4 py-2 rounded">Save Report</button>
+                </div>
             </form>
-            <div>
-                <label>Saved Reports: <select id="saved-reports"></select></label>
+            <div class="mt-4">
+                <label class="block">Saved Reports: <select id="saved-reports" class="border p-2 rounded w-full"></select></label>
             </div>
-            <div id="results-grid"></div>
-            <div id="chart" style="height:400px;margin-top:20px;"></div>
+            <div id="results-grid" class="mt-4"></div>
+            <div id="chart" class="mt-6" style="height:400px;"></div>
         </main>
     </div>
     <script src="js/menu.js"></script>
