--- a/frontend/search.html
+++ b/frontend/search.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Transactions</title>
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@5.5.0/dist/css/tabulator.min.css">
 </head>
-<body>
-    <div class="container">
-        <nav class="sidebar" id="menu"></nav>
-        <main class="content">
-            <h1>Search Transactions</h1>
-            <form id="search-form">
-                <input type="text" id="term" placeholder="Search value">
-                <button type="submit">Search</button>
+<body class="bg-gray-50 font-sans">
+    <div class="flex min-h-screen">
+        <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
+        <main class="flex-1 p-6">
+            <h1 class="text-2xl font-semibold mb-4">Search Transactions</h1>
+            <form id="search-form" class="space-y-4">
+                <input type="text" id="term" placeholder="Search value" class="border p-2 rounded w-full">
+                <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Search</button>
             </form>
-            <div id="results-grid"></div>
-            <p id="total"></p>
-            <div id="monthly-chart" style="height:400px"></div>
+            <div id="results-grid" class="mt-4"></div>
+            <p id="total" class="mt-4"></p>
+            <div id="monthly-chart" class="mt-6" style="height:400px"></div>
         </main>
     </div>
     <script src="js/menu.js"></script>
@@ -61,7 +61,7 @@
                 }
                 const totalEl = document.getElementById('total');
                 totalEl.textContent = 'Total: ' + formatCurrency(data.total);
-                totalEl.classList.add('currency');
+                totalEl.classList.add('text-right');
 
                 const chartEl = document.getElementById('monthly-chart');
                 if (data.results && data.results.length) {
