--- a/frontend/tags.html
+++ b/frontend/tags.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Tags</title>
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="container">
-        <nav class="sidebar" id="menu"></nav>
-        <main class="content">
-            <h1>Manage Tags</h1>
-            <form id="tag-form">
-                <label>Tag Name<br><input type="text" id="tag-name"></label><br>
-                <label>Keyword (for auto tagging)<br><input type="text" id="tag-keyword"></label><br>
-                <button type="submit">Create Tag</button>
+<body class="bg-gray-50 font-sans">
+    <div class="flex min-h-screen">
+        <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
+        <main class="flex-1 p-6">
+            <h1 class="text-2xl font-semibold mb-4">Manage Tags</h1>
+            <form id="tag-form" class="space-y-4">
+                <label class="block">Tag Name<br><input type="text" id="tag-name" class="border p-2 rounded w-full"></label>
+                <label class="block">Keyword (for auto tagging)<br><input type="text" id="tag-keyword" class="border p-2 rounded w-full"></label>
+                <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Tag</button>
             </form>
-            <h2>Existing Tags</h2>
-            <ul id="tag-list"></ul>
+            <h2 class="text-xl font-semibold mt-6 mb-2">Existing Tags</h2>
+            <ul id="tag-list" class="space-y-2"></ul>
         </main>
     </div>
     <script src="js/menu.js"></script>
@@ -34,6 +34,7 @@ async function loadTags(){
         span.textContent = `${t.name} (${t.keyword||''})`;
         const btn = document.createElement('button');
         btn.textContent = 'Edit';
+        btn.className = 'ml-2 bg-blue-600 text-white px-2 py-1 rounded';
         btn.addEventListener('click', async () => {
             const name = prompt('Tag Name', t.name);
             if (name === null) return;
@@ -49,6 +50,7 @@ async function loadTags(){
         });
         const del = document.createElement('button');
         del.textContent = 'Delete';
+        del.className = 'ml-2 bg-red-600 text-white px-2 py-1 rounded';
         del.addEventListener('click', async () => {
             if (!confirm('Delete this tag?')) return;
             await fetch('../php_backend/public/tags.php', {
