Enable group selection updates on monthly statement

--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -66,7 +66,7 @@
 <script>
 const monthSelect = document.getElementById('month');
 const yearSelect = document.getElementById('year');
-let groupOptions = [];
+let groupOptions = {};
 let groupLookup = {};
 const savingRows = new Set();
 const pendingChanges = new Map();
@@ -133,10 +133,10 @@ form.addEventListener('submit', function(e) {
         pendingChanges.clear();
         saveBtn.disabled = true;
 
-        groupOptions = [{ value: '', label: '-- None --' }];
+        groupOptions = { '': '-- None --' };
         groupLookup = { '': '' };
         groups.forEach(g => {
-            groupOptions.push({ value: g.id, label: g.name });
+            groupOptions[g.id] = g.name;
             groupLookup[g.id] = g.name;
         });
 
@@ -195,7 +195,7 @@ form.addEventListener('submit', function(e) {
                 {
                     title: 'Group',
                     field: 'group_id',
-                    editor: 'list',
+                    editor: 'select',
                     editorParams: { values: groupOptions },
                     editable: function(cell){
                         const data = cell.getRow().getData();
@@ -216,22 +216,11 @@ form.addEventListener('submit', function(e) {
             ],
             cellEditing: function(cell){
                 cell.getElement().classList.add('bg-yellow-100');
-                if (cell.getField() === 'group_id') {
-                    setTimeout(() => {
-                        const editor = cell.getElement().querySelector('select');
-                        if (editor) {
-                            editor.addEventListener('change', e => {
-                                alert('Group dropdown changed to ' + e.target.value);
-                            }, { once: true });
-                        }
-                    }, 0);
-                }
             },
             cellEditCancelled: function(cell){
                 cell.getElement().classList.remove('bg-yellow-100');
             },
             cellEdited: function(cell) {
-
                 const field = cell.getField();
                 if (field === 'group_id') {
                     const val = cell.getValue();
@@ -241,29 +230,22 @@ form.addEventListener('submit', function(e) {
                     const rowEl = cell.getRow().getElement();
                     showMessage('Group selected: ' + (groupLookup[val] || 'None'));
                     debug('Group selection changed to ' + val);
-                    const payload = { transaction_id: data.id, account_id: data.account_id, description: data.description };
+                    const numericVal = val === '' ? null : parseInt(val, 10);
 
-                    payload.group_id = val === '' ? '' : parseInt(val, 10);
-                    fetch('../php_backend/public/update_transaction.php', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(payload)
-                    })
-                    .then(resp => resp.json())
-                    .then(res => {
-                        if (!(res && res.status === 'ok')) {
-                            alert('Failed to save group');
-                            cell.setValue(oldVal, true);
-                        }
-                    })
-                    .catch(() => {
-                        alert('Failed to save group');
-                        cell.setValue(oldVal, true);
+                    if (numericVal === (data.original_group_id ?? null)) {
+                        pendingChanges.delete(data.id);
+                        rowEl.classList.remove('bg-yellow-50');
+                    } else {
+                        pendingChanges.set(data.id, {
+                            account_id: data.account_id,
+                            description: data.description,
+                            group_id: val === '' ? '' : numericVal
+                        });
+                        rowEl.classList.add('bg-yellow-50');
+                    }
 
-                    });
-                    rowEl.classList.add('bg-yellow-50');
+                    saveBtn.disabled = pendingChanges.size === 0;
                 }
-                saveBtn.disabled = pendingChanges.size === 0;
             }
         });
         document.getElementById('undo-btn').addEventListener('click', () => {
