Revert "style: integrate new design system"

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -1,69 +1,69 @@
 <!-- Navigation menu shared across pages -->
-<img src="logo.svg" alt="Finance Manager Logo" class="h-6 mb-g-4 mx-auto">
-<h2 class="text-h2 font-semibold tracking-tight text-ink-900 mb-g-4">Menu</h2>
-<div class="space-y-g-6">
+<img src="logo.svg" alt="Finance Manager Logo" class="w-32 mb-4 mx-auto">
+<h2 class="text-xl font-semibold mb-4">Menu</h2>
+<div class="space-y-6">
   <div>
-    <h3 class="text-h3 font-semibold text-ink-900 mb-g-2">Overview</h3>
-    <ul class="space-y-g-2">
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="index.html"><i class="fa-solid fa-house mr-g-2"></i> Home</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="upload.html"><i class="fa-solid fa-upload mr-g-2"></i> Upload OFX Files</a></li>
+    <h3 class="text-lg font-semibold mb-2">Overview</h3>
+    <ul class="space-y-2">
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="index.html"><i class="fa-solid fa-house mr-2"></i> Home</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="upload.html"><i class="fa-solid fa-upload mr-2"></i> Upload OFX Files</a></li>
     </ul>
   </div>
 
   <div>
-    <h3 class="text-h3 font-semibold text-ink-900 mb-g-2">Dashboards</h3>
-    <ul class="space-y-g-2">
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="yearly_dashboard.html"><i class="fa-solid fa-chart-line mr-g-2"></i> Yearly Dashboard</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="all_years_dashboard.html"><i class="fa-solid fa-chart-bar mr-g-2"></i> All Years Dashboard</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="monthly_dashboard.html"><i class="fa-solid fa-chart-column mr-g-2"></i> Monthly Dashboard</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="group_dashboard.html"><i class="fa-solid fa-users mr-g-2"></i> Group Dashboard</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="account_dashboard.html"><i class="fa-solid fa-wallet mr-g-2"></i> Account Dashboard</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="recurring_spend.html"><i class="fa-solid fa-repeat mr-g-2"></i> Recurring Spend</a></li>
+    <h3 class="text-lg font-semibold mb-2">Dashboards</h3>
+    <ul class="space-y-2">
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="yearly_dashboard.html"><i class="fa-solid fa-chart-line mr-2"></i> Yearly Dashboard</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="all_years_dashboard.html"><i class="fa-solid fa-chart-bar mr-2"></i> All Years Dashboard</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="monthly_dashboard.html"><i class="fa-solid fa-chart-column mr-2"></i> Monthly Dashboard</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="group_dashboard.html"><i class="fa-solid fa-users mr-2"></i> Group Dashboard</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="account_dashboard.html"><i class="fa-solid fa-wallet mr-2"></i> Account Dashboard</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="recurring_spend.html"><i class="fa-solid fa-repeat mr-2"></i> Recurring Spend</a></li>
     </ul>
   </div>
 
   <div>
-    <h3 class="text-h3 font-semibold text-ink-900 mb-g-2">Graphs</h3>
-    <ul class="space-y-g-2">
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="graphs.html"><i class="fa-solid fa-chart-pie mr-g-2"></i> Graphs</a></li>
+    <h3 class="text-lg font-semibold mb-2">Graphs</h3>
+    <ul class="space-y-2">
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="graphs.html"><i class="fa-solid fa-chart-pie mr-2"></i> Graphs</a></li>
     </ul>
   </div>
 
   <div>
-    <h3 class="text-h3 font-semibold text-ink-900 mb-g-2">Budgets</h3>
-    <ul class="space-y-g-2">
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="budgets.html"><i class="fa-solid fa-wallet mr-g-2"></i> Budgets</a></li>
+    <h3 class="text-lg font-semibold mb-2">Budgets</h3>
+    <ul class="space-y-2">
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="budgets.html"><i class="fa-solid fa-wallet mr-2"></i> Budgets</a></li>
     </ul>
   </div>
 
   <div>
-    <h3 class="text-h3 font-semibold text-ink-900 mb-g-2">Transactions</h3>
-    <ul class="space-y-g-2">
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="monthly_statement.html"><i class="fa-solid fa-file-invoice-dollar mr-g-2"></i> View Monthly Statement</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="report.html"><i class="fa-solid fa-table mr-g-2"></i> Transaction Reports</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="search.html"><i class="fa-solid fa-magnifying-glass mr-g-2"></i> Search Transactions</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="transfers.html"><i class="fa-solid fa-right-left mr-g-2"></i> Transfers</a></li>
+    <h3 class="text-lg font-semibold mb-2">Transactions</h3>
+    <ul class="space-y-2">
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="monthly_statement.html"><i class="fa-solid fa-file-invoice-dollar mr-2"></i> View Monthly Statement</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="report.html"><i class="fa-solid fa-table mr-2"></i> Transaction Reports</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="search.html"><i class="fa-solid fa-magnifying-glass mr-2"></i> Search Transactions</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="transfers.html"><i class="fa-solid fa-right-left mr-2"></i> Transfers</a></li>
     </ul>
   </div>
 
   <div>
-    <h3 class="text-h3 font-semibold text-ink-900 mb-g-2">Organisation</h3>
-    <ul class="space-y-g-2">
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="tags.html"><i class="fa-solid fa-tags mr-g-2"></i> Manage Tags</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="missing_tags.html"><i class="fa-solid fa-circle-question mr-g-2"></i> Missing Tags</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="categories.html"><i class="fa-solid fa-folder-open mr-g-2"></i> Manage Categories</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="groups.html"><i class="fa-solid fa-users mr-g-2"></i> Manage Groups</a></li>
+    <h3 class="text-lg font-semibold mb-2">Organisation</h3>
+    <ul class="space-y-2">
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="tags.html"><i class="fa-solid fa-tags mr-2"></i> Manage Tags</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="missing_tags.html"><i class="fa-solid fa-circle-question mr-2"></i> Missing Tags</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="categories.html"><i class="fa-solid fa-folder-open mr-2"></i> Manage Categories</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="groups.html"><i class="fa-solid fa-users mr-2"></i> Manage Groups</a></li>
     </ul>
   </div>
 
   <div>
-    <h3 class="text-h3 font-semibold text-ink-900 mb-g-2">Administration</h3>
-    <ul class="space-y-g-2">
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="processes.html"><i class="fa-solid fa-gear mr-g-2"></i> Run Processes</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="logs.html"><i class="fa-solid fa-clipboard-list mr-g-2"></i> View Logs</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="backup.html"><i class="fa-solid fa-database mr-g-2"></i> Backup &amp; Restore</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="../users.php"><i class="fa-solid fa-user mr-g-2"></i> Manage Users</a></li>
-      <li><a class="flex items-center text-primary-600 hover:text-primary-700 hover:bg-primary-50 p-g-2 rounded-pill transition-colors duration-fast ease-standard" href="../logout.php"><i class="fa-solid fa-right-from-bracket mr-g-2"></i> Logout</a></li>
+    <h3 class="text-lg font-semibold mb-2">Administration</h3>
+    <ul class="space-y-2">
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="processes.html"><i class="fa-solid fa-gear mr-2"></i> Run Processes</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="logs.html"><i class="fa-solid fa-clipboard-list mr-2"></i> View Logs</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="backup.html"><i class="fa-solid fa-database mr-2"></i> Backup &amp; Restore</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="../users.php"><i class="fa-solid fa-user mr-2"></i> Manage Users</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="../logout.php"><i class="fa-solid fa-right-from-bracket mr-2"></i> Logout</a></li>
     </ul>
   </div>
 </div>
