--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,28 +8,27 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Finance Manager</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <script src="js/tailwind-config.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="logo.svg">
     <style>
         body { font-family: 'Inter', sans-serif; }
     </style>
 </head>
-<body class="bg-canvas">
+<body class="bg-gradient-to-br from-indigo-50 via-white to-blue-50">
     <div class="flex min-h-screen">
-        <nav id="menu"></nav>
-        <main class="flex-1 min-w-0 overflow-x-auto p-g-6 text-center">
-            <h1 class="text-display font-semibold tracking-tight text-ink-900 mb-g-4">Welcome to Finance Manager</h1>
-            <p class="text-body text-ink-500">Select an option from the menu to get started.</p>
-            <p id="version" class="text-fine text-ink-400">Version: loading...</p>
+        <nav id="menu" class="w-64 flex-shrink-0 bg-white/80 backdrop-blur border-r p-6 shadow"></nav>
+        <main class="flex-1 min-w-0 overflow-x-auto p-6">
+            <h1 class="text-3xl font-semibold mb-4 text-indigo-700">Welcome to Finance Manager</h1>
+            <p class="text-gray-700">Select an option from the menu to get started.</p>
+            <p id="version" class="text-gray-500">Version: loading...</p>
 
-            <section class="mt-g-8 rounded-xl bg-canvas border border-ink-100 p-g-8 shadow-card text-left">
-                <h2 class="text-h2 font-semibold tracking-tight text-ink-900 mb-g-4">What You Can Do</h2>
-                <ul class="list-disc pl-g-5 space-y-g-2">
+            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg">
+                <h2 class="text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
+                <ul class="list-disc pl-5 space-y-2">
                     <li>Upload OFX files to import your bank statements.</li>
                     <li>Explore your finances through dashboards:
-                        <ul class="list-disc pl-g-5 space-y-g-1">
+                        <ul class="list-disc pl-5 space-y-1">
                             <li>Yearly dashboard summarises activity for a selected year.</li>
                             <li>All years dashboard compares trends across years.</li>
                             <li>Monthly dashboard shows month-by-month results.</li>
