--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -13,7 +13,7 @@
   <div>
     <h3 class="text-lg font-semibold mb-2">Transaction Hub</h3>
     <ul class="space-y-1">
-      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="monthly_statement.html"><i class="fa-solid fa-file-invoice-dollar mr-1"></i> View Monthly Statement</a></li>
+      <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="monthly_statement.html"><i class="fa-solid fa-file-invoice-dollar mr-1"></i> Monthly Statement</a></li>
       <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="report.html"><i class="fa-solid fa-table mr-1"></i> Transaction Reports</a></li>
       <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="search.html"><i class="fa-solid fa-magnifying-glass mr-1"></i> Search Transactions</a></li>
       <li><a class="flex items-center text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 p-2 rounded" href="transfers.html"><i class="fa-solid fa-right-left mr-1"></i> Transfers</a></li>
